--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <img src="circle-cropped.png" />
   <h1>Aditya Kulkarni</h1>
   <p><em>B.tech<strong>(Production Engineer)</strong></em>.</p>
-  <P>I completed my B.tech from <a href="http://sggs.ac.in">Shri Guru Gobind Singhji Institute Of Engineering & Technology,Vinhupuri Nanded.</a> </P>
+  <P>I completed my B.tech from <a href="http://sggs.ac.in">Shri Guru Gobind Singhji Institute Of Engineering & Technology,Vishnupuri, Nanded.</a> </P>
   <p>I love Gyming & sports.</p>
   <hr />
   <h3>EDUCATION</h3>
